<resources>
    <string name="app_name">Asclepius</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="user">User</string>
    <string name="doctor">Doctor</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="comfirm_password">Comfirm password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="majority">Majority</string>
    <string name="experience">Experience</string>
    <string name="hi">Hi,</string>
    <string name="button">Button</string>
    <string name="expert">Expert</string>
    <string name="student">Student</string>
    <string name="fresh_graduate">Fresh-graduate</string>
    <string name="body_mass_index">Body mass index</string>
    <string name="calories_for_weight_gain_loss">Calories for weight gain/loss</string>
    <string name="target_heart_rate">Target heart rate</string>
    <string name="blood_volume">Blood volume</string>
    <string name="blood_donation">Blood donation</string>
    <string name="water_intake">Water intake</string>
    <string name="ideal_weight">Ideal weight</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="daily_calories_need">Daily calories need</string>
    <string name="bmi">BMI</string>
    <string name="activity">Activity</string>
    <string name="sedentary">Sedentary</string>
    <string name="active">Active</string>
    <string name="extra_active">Extra active</string>
    <string name="very_active">Very active</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="activity_level">Activity level</string>
    <string name="calories">Calories</string>
    <string name="confirm">confirm</string>
    <string name="resting_heart_rate">Resting heart rate</string>
    <string name="workout_intensity">Workout intensity</string>
    <string name="little">Little</string>
    <string name="intense">Intense</string>
    <string name="heart_rate">Heart rate</string>
    <string name="blood_donation_date">Blood donation date</string>
    <string name="eligible_date">Eligible date</string>
    <string name="daily_water_intake">Daily water intake</string>
    <string name="water_amount">Water amount</string>
    <string name="nearest_hospital">Nearest hospital</string>
    <string name="title_activity_nearest_hospital">Map</string>
    <string name="nervous_system">Nervous system</string>
    <string name="title_symptoms_health_history">Title:\nSymptoms:\nHealth history:</string>
    <string name="title">Title</string>

</resources>
