<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".health_calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:text="@string/body_mass_index" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:text="@string/daily_calories_need" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:text="@string/target_heart_rate" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:text="@string/blood_donation" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:text="@string/water_intake" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:text="@string/ideal_weight" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>