<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Body_mass_index"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="333dp"
        android:layout_height="92dp"
        android:contentDescription="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton"
        app:srcCompat="@drawable/xlarge" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="333dp"
        android:layout_height="92dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/xlarge" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/height"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/weight"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/male"
        android:textColor="#3B1561"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:fontFamily="sans-serif-black" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="91dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/female"
        android:textColor="#3B1561"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:fontFamily="sans-serif-black" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="78dp"
        android:layout_height="82dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/male"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:srcCompat="@drawable/small" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="93dp"
        android:layout_height="73dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="69dp"
        android:contentDescription="@string/female"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:srcCompat="@drawable/small" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="609dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/gender"
        android:textColor="#3B1561"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/button14"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="350dp"
        android:background="@drawable/rounded"
        android:fontFamily="sans-serif-black"
        android:text="@string/calculate"
        android:textColor="#ffffff"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="288dp"
        android:layout_marginBottom="249dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/bmi"
        android:textColor="#3B1561"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="249dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#3B1561"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="15dp"
        android:text="@string/body_mass_index"
        android:textColor="#3B1561"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>