<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Target_heart_rate"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <ImageView
        android:id="@+id/imageView44"
        android:layout_width="333dp"
        android:layout_height="92dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="87dp"
        android:contentDescription="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/imageView30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/xlarge" />

    <ImageView
        android:id="@+id/imageView45"
        android:layout_width="333dp"
        android:layout_height="92dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/imageView30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView44"
        app:srcCompat="@drawable/xlarge" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="110dp"
        android:layout_height="74dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="41dp"
        android:contentDescription="@string/very_active"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/imageView43"
        app:layout_constraintStart_toEndOf="@+id/imageView28"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/medium" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="76dp"
        android:layout_height="74dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/light"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/radioButton20"
        app:layout_constraintStart_toStartOf="@+id/editText14"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/small" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="96dp"
        android:layout_height="73dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="400dp"
        android:contentDescription="@string/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView30"
        app:layout_constraintTop_toBottomOf="@+id/editText14"
        app:srcCompat="@drawable/small" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="349dp"
        android:background="@drawable/rounded"
        android:fontFamily="sans-serif-black"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton20"
        tools:textSize="12sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="251dp"
        android:layout_marginBottom="292dp"
        android:text="@string/heart_rate"
        android:textColor="#3B1561"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:fontFamily="sans-serif-black" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="292dp"
        android:textColor="#3B1561"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:fontFamily="sans-serif-black" />

    <RadioButton
        android:id="@+id/radioButton11"
        android:layout_width="72dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="88dp"
        android:text="@string/little"
        android:textColor="#3B1561"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/radioButton20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:fontFamily="sans-serif-black" />

    <RadioButton
        android:id="@+id/radioButton20"
        android:layout_width="105dp"
        android:layout_height="34dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="47dp"
        android:text="@string/moderate"
        android:textColor="#3B1561"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/radioButton21"
        app:layout_constraintStart_toEndOf="@+id/radioButton11"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:fontFamily="sans-serif-black" />

    <RadioButton
        android:id="@+id/radioButton21"
        android:layout_width="90dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="420dp"
        android:text="@string/intense"
        android:textColor="#3B1561"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButton20"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:fontFamily="sans-serif-black" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="249dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/workout_intensity"
        android:textColor="#3B1561"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText14" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/editText14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/resting_heart_rate"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText12" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="20dp"
        android:text="@string/target_heart_rate"
        android:textColor="#3B1561"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>