<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Body_weight"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <ImageView
        android:id="@+id/imageView48"
        android:layout_width="333dp"
        android:layout_height="92dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/age"
        app:layout_constraintBottom_toBottomOf="@+id/button29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView46"
        app:srcCompat="@drawable/xlarge" />

    <ImageView
        android:id="@+id/imageView47"
        android:layout_width="92dp"
        android:layout_height="70dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/female"
        app:layout_constraintBottom_toTopOf="@+id/editText25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButton7"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:srcCompat="@drawable/small" />

    <ImageView
        android:id="@+id/imageView46"
        android:layout_width="79dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="43dp"
        android:contentDescription="@string/male"
        app:layout_constraintBottom_toBottomOf="@+id/editText25"
        app:layout_constraintEnd_toStartOf="@+id/imageView47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:srcCompat="@drawable/small" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="261dp"
        android:layout_marginBottom="370dp"
        android:text="@string/weight"
        android:textColor="#3B1561"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button29"
        tools:fontFamily="sans-serif-black" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="370dp"
        android:textColor="#3B1561"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/button29"
        tools:fontFamily="sans-serif-black" />

    <Button
        android:id="@+id/button29"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="418dp"
        android:background="@drawable/rounded"
        android:fontFamily="sans-serif-black"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText25"
        tools:textSize="12sp" />

    <EditText
        android:id="@+id/editText25"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="486dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/height"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton22" />

    <RadioButton
        android:id="@+id/radioButton22"
        android:layout_width="91dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="553dp"
        android:text="@string/female"
        android:textColor="#3B1561"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButton7"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        tools:fontFamily="sans-serif-black" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="554dp"
        android:text="@string/male"
        android:textColor="#3B1561"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        tools:fontFamily="sans-serif-black" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="609dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/gender"
        android:textColor="#3B1561"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="653dp"
        android:text="@string/ideal_weight"
        android:textColor="#3B1561"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>