<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cases_first">

    <Button
        android:id="@+id/button34"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView32"
        android:layout_alignStart="@+id/textView32"
        android:layout_alignEnd="@+id/textView32"
        android:layout_alignBottom="@+id/textView32"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-112dp"
        android:layout_marginBottom="-106dp"
        android:fontFamily="sans-serif-black"
        android:lines="2"
        android:text="@string/title"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <Button
        android:id="@+id/button37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button34"
        android:layout_alignStart="@+id/button34"
        android:layout_alignEnd="@+id/button34"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-2dp"
        android:text="@string/button" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/nervous_system"
        android:textColor="#3B1561"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>